# de-spii

./: .pre-commit-config.yaml  README.md  justfile  pyproject.toml
despii/: core.py  util.py
despii/detectors/: llm.py  regex.py  regex_detector.py  secrets.py  spacy.py
tests/: conftest.py
tests/unit/: test_core.py  test_detectors_regex.py  test_detectors_secrets.py  test_detectors_spacy.py  test_util.py
